# large-scale-dimensionality-reduction

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
scripts/: download_from_s3.sh  run_visualisations_remote.sh  send_to_chroma.py  slurm_job.sh  slurm_job_pacmap.sh  slurm_job_trimap.sh  slurm_job_tsne.sh  slurm_job_umap.sh  visualisations_script_pacmap.py  visualisations_script_pca.py  visualisations_script_trimap.py  visualisations_script_tsne.py  visualisations_script_umap.py
src/large_scale_dimensionality_reduction/embeddings/: __init__.py  embeddings.py
src/large_scale_dimensionality_reduction/frontend/: frontend.py  utils.py  visualizations.py
src/large_scale_dimensionality_reduction/frontend/pages/: datasets.py  saved_reductions.py
src/large_scale_dimensionality_reduction/models/: __init__.py
src/large_scale_dimensionality_reduction/utils/: __init__.py  config.py  database.py  s3.py  ssh.py
src/large_scale_dimensionality_reduction/vector_db/: __init__.py  db.py
