[project]
name = "large-scale-dimensionality-reduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.6",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.3",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "streamlit>=1.44.1",
    "umap-learn>=0.5.7",
    "pacmap>=0.8.0",
    "scikit-learn>=1.6.1",
    "trimap>=1.1.4",
    "plotly>=6.0.1",
    "boto3>=1.38.23",
    "python-dotenv>=1.1.0",
    "paramiko>=3.4.0",
]
